bugfix(sub navigation header): align label to the left

--- a/src/components/shared/templates/Templates.scss
+++ b/src/components/shared/templates/Templates.scss
@@ -32,7 +32,6 @@
 }
 
 .subNavigationContainer button {
-  padding-right: 80px;
   margin-right: 20px;
 }
 
@@ -91,4 +90,8 @@
     border: none;
     box-shadow: 0px 0px 0px 1px rgb(15 113 203 / 40%);
   }
+}
+
+.subNavigationContainer button {
+  text-align: left;
 }
